<resources>
    <string name="app_name">recipeapp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_text_field_hint">Email</string>
    <string name="password_text_field_hint">Password</string>
    <string name="login_button_text">Login</string>
    <string name="register_button_text">Register</string>
    <string name="background_image_desc">Background image</string>
    <string name="verification_text">Please check your email for verification link</string>
    <string name="check_verify_button_text">I’ve Verified</string>
    <string name="resend_email_button_text">Resend Email</string>
    <string name="last_name_text_field_hint">Last Name</string>
    <string name="first_name_text_field_hint">First Name</string>
</resources>