<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/login_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <LinearLayout
        android:id="@+id/loginForm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_default_height"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="@dimen/field_default_width"
            android:layout_height="@dimen/field_default_height"
            android:autofillHints="emailAddress"
            android:hint="@string/email_text_field_hint"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="@dimen/field_default_width"
            android:layout_height="@dimen/field_default_height"
            android:layout_marginTop="16dp"
            android:autofillHints="password"
            android:hint="@string/password_text_field_hint"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textColorHint="@color/dark_gray" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="@dimen/button_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/login_button_text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:backgroundTint="#C56260" />

        <Button
            android:id="@+id/goToRegisterButton"
            android:layout_width="@dimen/button_default_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/register_button_text"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            app:backgroundTint="#C56260" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>